# Parity-game-solver

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt  hello.cc  main.cc  main.sh  test.cc  test.sh
src/DOT_files/: abcg_arbiter.tlsf.dot  tut30.dot
src/cpphoafparser/: cpphoaf
src/example_code/: object_parser.cc
src/scripts/: build.sh  main.sh  test.sh
src/tools/: arena_graph.cc  arena_graph.hh  game.cc  game.hh  optmizer.cc  optmizer.hh  parser.cc  parser.hh  renderer.cc  renderer.hh  solver.cc  solver.hh  tester.cc  tester.hh
